// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en Product image debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffe-mug.png"
  />
</div>
`;

exports[`pruebas en Product image debe de mostrar el componente correctamente con la imagen del producto 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://example.jpg"
/>
`;
